# blog_api

./: .env.example  Cargo.toml  README.md
migrations/: 20250411073915_initial_schema.sql
src/: db.rs  main.rs
src/handlers/: auth.rs  post.rs  user.rs
src/middleware/: mod.rs  verify_user.rs
src/models/: auth.rs  comment.rs  post.rs  user.rs
src/response/: server_response.rs
src/routes/: check_health.rs  mod.rs  router.rs
src/utils/: cookies.rs  db_functions.rs  jwt.rs  mod.rs
