[package]
name = "rust-blog-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.3", features = ["macros"] }
bcrypt = "0.17.0"
chrono = { version = "0.4.40", features = ["serde"] }
cookie = "0.18.1"
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.4", features = [
    "postgres",
    "runtime-tokio",
    "uuid",
    "chrono",
] }
tokio = { version = "1.44.2", features = ["rt-multi-thread"] }
tower-cookies = "0.11.0"
uuid = { version = "1.16.0", features = ["serde", "v4"] }
